--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:init": "npx prisma init",
+    "prisma:pull": "npx prisma db pull",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "migrate:generate": "npx prisma migrate dev --name $1",
+    "migrate:run": "npx prisma db push",
+    "reverse-proxy": "npx ngrok http 3000",
+    "stripe:proxy": "stripe listen --forward-to $1",
+    "supabase:init": "npx supabase init",
+    "supabase:start": "npx supabase start",
+    "supabase:stop": "npx supabase stop",
+    "supabase:status": "npx supabase status"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -59,12 +71,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@stripe/stripe-js": "^4.5.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "prisma": "^5.20.0",
+    "supabase": "^1.200.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
