--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -92,6 +93,7 @@
     "prisma": "^5.20.0",
     "supabase": "^1.200.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^10.0.0"
   }
 }
